--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,11 @@
 * {
   box-sizing: border-box;
 }
+
+[aria-invalid="true"] {
+  border-color: #ff3434 !important;
+}
+
+h2 {
+  font-size: 1.25rem;
+}
